<resources>
    <string name="app_name">YourPantry</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="not_registered">not registered?</string>
    <string name="register">Register</string>
    <string name="confirm_password">confirm_password</string>
    <string name="firstName">Firstname</string>
    <string name="lastName">Lastname</string>
    <string name="no_of_attempts_remaining_5">attempts remaining:5</string>
    <string name="emailaddress">EmailAddress</string>
    <string name="food_type">Food Type</string>
    <string name="food_expiry_date">Food expiry date</string>
    <string name="food_name">Food Name</string>
    <string name="add">Add</string>
    <string name="date_month_year">date-month-year</string>
    <string name="_1">1</string>
    <string name="title_1">Title 1</string>
    <string name="type1">Type1</string>
    <string name="_01_05_2021">01/05/2021</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="datemonthyear">Date/Month/Year</string>
    <string name="deleteall">Delete All</string>
    <string name="no_food">No Food</string>
    <string name="notify_me">Notify Me</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="recipe_ideas">Recipe Ideas</string>


</resources>